# pypeh

./: .gitignore  .mypy.ini  Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: format.yml  publish.yml  tests.yml
docs/: adapters.md  core.md  index.md  session-reference.md  session.md
scripts/integration/s3-vito/: s3.py  verify.py
src/pypeh/: __init__.py
src/pypeh/adapters/dataops/: dataframe_adapter.py
src/pypeh/adapters/enrichment/: dataframe_adapter.py
src/pypeh/adapters/export/: xlsx.py
src/pypeh/adapters/persistence/: dataframe.py  dataset_parquet.py  hosts.py  rocrate.py  serializations.py  sql.py
src/pypeh/core/: abc.py  api.py  provenance.py
src/pypeh/core/abc/: commands.py
src/pypeh/core/cache/: containers.py  dataview.py  tree.py  utils.py
src/pypeh/core/commands/: extraction.py  ingestion.py
src/pypeh/core/factories/: handlers.py
src/pypeh/core/handlers/: baseclasses.py  extraction.py  ingestion.py
src/pypeh/core/interfaces/: dataops.py  export.py  persistence.py  repository.py
src/pypeh/core/models/: constants.py  digital_objects.py  dto.py  graph.py  internal_data_layout.py  peh.py  peh_wrappers.py  proxy.py  semantic_profile.py  settings.py  transform.py  typing.py  validation_dto.py  validation_errors.py
src/pypeh/core/persistence/: formats.py  hosts.py  local.py  remote.py
src/pypeh/core/services/: context.py  data_processing.py  dataops.py
src/pypeh/core/session/: connections.py  session.py
src/pypeh/core/tasks/: ingestion.py
src/pypeh/core/utils/: dto.py  function_utils.py  linkml_schema.py  namespaces.py  rdf_graph_builder.py  resolve_identifiers.py  transform.py
src/pypeh/dataframe_adapter/: adapter.py  dataops.py  persistence.py
src/pypeh/dataframe_adapter/validation/: parsers.py
src/pypeh/rocrate_adapter/: persistence.py
src/pypeh/sql_adapter/: persistence.py
tests/: conftest.py
tests/adapters/aggregation/: test_aggregation.py  test_statistics.py
tests/adapters/enrichment/: test_dataframe_adapter.py
tests/adapters/export/: test_xlsx.py
tests/adapters/outbound/aggregation/: test_aggregation.py  test_statistics.py
tests/adapters/outbound/enrichment/: test_dataframe_adapter.py
tests/adapters/outbound/export/: test_xlsx.py
tests/adapters/outbound/persistence/: test_formats.py  test_hosts.py  test_serializations.py  test_web_io.py
tests/adapters/persistence/: test_dataset_parquet.py  test_hosts.py  test_serializations.py  test_web_io.py
tests/adapters/persistence/input/: observation_results.json  validation_test_03_data.xlsx
tests/adapters/validation/pandera_adapter/: test_custom_checks.py  test_validation_parsers.py
tests/core/abc/: test_handlers.py  test_tasks.py
tests/core/api/: test_api.py
tests/core/cache/: test_cache.py  test_dataview.py
tests/core/cache/input/: observable_entities.yaml  observable_properties.yaml  observation_results.yaml
tests/core/interfaces/: test_interfaces.py
tests/core/interfaces/dataops/: test_dataops.py
tests/core/models/: enrichment_functions.py  test_dataset_representation.py  test_digital_objects.py  test_graph.py  test_internal_datalayout.py  test_peh_wrappers.py  test_semantic_profile.py  test_settings.py  test_validation_dto.py
tests/core/models/input/: data_layouts.yaml  observable_properties.yaml  observations.yaml
tests/core/persistence/: test_formats.py  test_hosts.py
tests/core/services/: test_dataops.py
tests/core/services/data_processing/: test_datatemplate.py  test_datavalidation.py
tests/core/session/: test_session_dataset_parquet.py  test_session_init.py  test_session_resources.py  test_session_validation.py
tests/core/utils/: namespaces.py
tests/dataframe_adapter/: test_data_validation_adapter.py  test_validation_parses.py
tests/end_to_end/enrichment/: test_dataframe_enrichment.py
tests/end_to_end/validation/: test_dataframe_consistency_validation.py  test_dataframe_validation.py  test_dataframe_validation_config.py
tests/input/roundtrip/: observable_properties_adults_blood_quest.yaml  observable_properties_adults_bloodserum_lab.yaml  observable_properties_considerations_adults.yaml  observable_properties_general_quest.yaml  observations_adults.yaml
tests/integration/s3-vito/: s3.py
tests/interfaces/dataops/: test_dataops.py
tests/test_utils/: dirutils.py  xlsx.py
tests/utils/: test_namespaces.py
(+128 files in other folders)
